[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Heart.png" type="Texture" id=1]
[ext_resource path="res://Assets/Profile_photo.png" type="Texture" id=2]
[ext_resource path="res://Assets/font_40.tres" type="DynamicFont" id=3]
[ext_resource path="res://SourceCode/RossPopup.gd" type="Script" id=4]
[ext_resource path="res://Assets/Cross.png" type="Texture" id=5]
[ext_resource path="res://Assets/Button_theme.tres" type="Theme" id=6]
[ext_resource path="res://Assets/12345Rotors.png" type="Texture" id=7]
[ext_resource path="res://Assets/Player_theme.tres" type="Theme" id=8]
[ext_resource path="res://Assets/Click.wav" type="AudioStream" id=9]

[node name="RossPopup" type="TextureButton"]
margin_right = 101.0
margin_bottom = 73.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupDialog" type="PopupDialog" parent="."]
visible = true
margin_left = -980.0
margin_top = -1920.0
margin_right = 99.9999
theme = ExtResource( 6 )
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="PopupDialog"]
margin_left = 13.7279
margin_top = 8.0
margin_right = 413.728
margin_bottom = 408.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PopupDialog/TextureRect"]
margin_left = -13.7279
margin_top = 444.0
margin_right = 1066.27
margin_bottom = 464.0
color = Color( 0.854902, 0.905882, 0.905882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="PopupDialog/TextureRect"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.1817
margin_top = 69.4543
margin_right = 645.182
margin_bottom = 5.45435
custom_fonts/font = ExtResource( 3 )
text = "Hi! I'm Ross and I make apps. 
I started programming and app building as a hobby in April 2020. I aim to build educational, fun apps & games."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text2" type="Label" parent="PopupDialog/TextureRect/Text"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -624.273
margin_top = 471.362
margin_right = -1.27319
margin_bottom = 919.362
custom_fonts/font = ExtResource( 3 )
text = "I can see you like puzzles - I have another puzzle game on Google Play! Yey! 

Align rotors with the different numbers to sum up to a specific value in the centre.
30 handcrafted levels were made to test your puzzle and math skills."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="PopupDialog/TextureRect/Text/Text2"]
margin_left = -404.88
margin_top = 0.790283
margin_right = -4.87976
margin_bottom = 450.79
mouse_filter = 2
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text3" type="Label" parent="PopupDialog/TextureRect/Text/Text2/TextureRect2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -124.5
margin_right = 124.5
margin_bottom = 60.0
custom_fonts/font = ExtResource( 3 )
text = "12345 Rotors"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenLink" type="Button" parent="PopupDialog/TextureRect/Text/Text2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -693.773
margin_top = 51.1008
margin_right = 306.227
margin_bottom = 182.101
focus_mode = 0
theme = ExtResource( 8 )
custom_fonts/font = ExtResource( 3 )
text = "Play 12345 Rotors"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="PopupDialog"]
margin_left = 981.262
margin_top = 15.2648
margin_right = 1051.26
margin_bottom = 85.2648
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="ClickAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
[connection signal="pressed" from="." to="." method="_on_RossPopup_pressed"]
[connection signal="pressed" from="PopupDialog/TextureRect/Text/Text2/OpenLink" to="." method="_on_OpenLink_pressed"]
[connection signal="pressed" from="PopupDialog/CloseButton" to="." method="_on_CloseButton_pressed"]
